feat(pdf): 增强PDF解析器支持图片提取和页面布局保持
- 集成OSS服务实现PDF中图片的上传和存储功能
- 添加PDF流式图片识别和处理机制，支持图片位置定位
- 扩展TextLine数据结构，增加页面坐标和页码信息
- 实现图片在Markdown中的正确渲染格式输出
- 优化文本行合并逻辑，确保同页面元素正确组合
- 添加图片尺寸过滤和颜色空间转换处理
- 更新字体粗体判断逻辑，提升标题